# peaq-rs

./: Cargo.toml
examples/: wav_compare.rs
refs/components/: COPYRIGHT_1.RTF  COPYRIGHT_2.RTF  COPYRIGHT_3.RTF  ITEMLIST_1.TXT  ITEMLIST_2.TXT  ITEMLIST_3.TXT  LEAME.TXT  LISEZMOI.TXT  README.TXT
src/: config.rs  earmodel.rs  fbearmodel.rs  fft.rs  fftearmodel.rs  filterbank.rs  leveladapter.rs  lib.rs  modulation.rs  movs.rs  nn.rs  peaq.rs  test.rs
src/measures/: bandwidth.rs  mod.rs  noisemaskratio.rs
src/peaq/: advanced.rs  basic.rs  mod.rs
