[package]
name = "peaq"
version = "0.1.0"
authors = ["jdeeny <jdeeny@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
itertools = "0.8.0"
rustfft = "3.0.0"
num-complex = "0.2.1"

[dev-dependencies]
structopt = "0.2.15"
rodio = "0.8.1"
libsoxr = { git = "https://github.com/lrbalt/libsoxr-rs.git" }
